# LightSwitch

./: Dockerfile  LICENSE  README.md  database-setup.sql  default.conf  docker-compose.yml  install.sh  prometheus.yml
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
app/lightswitchapp/: build.gradle.kts  settings.gradle.kts
app/lightswitchapp/app/: build.gradle.kts
app/lightswitchapp/gradle/: libs.versions.toml
app/lightswitchios/lightswitchios/: ContentView.swift  lightswitchiosApp.swift
app/lightswitchios/lightswitchios.xcodeproj/: project.pbxproj
app/lightswitchios/lightswitchiosTests/: lightswitchiosTests.swift
backend/: Dockerfile
backend/core-service/: .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
backend/core-service/config/: detekt.yml
backend/log-service/: .gitignore  build.gradle.kts  settings.gradle.kts
backend/sdk/: build.gradle
frontend/: .gitignore  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  AuthAtom.ts  index.css  main.tsx
jenkins/: cd.jenkinsfile  ci.jenkinsfile
sdk/java/: .gitignore  README.md  build.gradle  settings.gradle
sdk/python/lightswitch/: pyproject.toml
sdk/python/lightswitch/lightswitch/: __init__.py  custom_sseclient.py  environments_model.py  exceptions.py  geometry.py  lightswitch.py  models.py  models_ref.py  operation.py  polling.py  sse_test.py  stream_manager.py  streaming.py  swtichref.py  upper_model.py  utils.py
sdk/python/lightswitch/tests/: test_calc.py
(+428 files in other folders)
